Fixes to transactions. - fixes edge case where undefined url can be used for the refresh payment status button - switches the transaction modal and the buy wizard to get the server url from App.js instead of the model - fixes layout issues with very large numbers in the quantity input in the buy wizard - fixes issue where if the user has no shippable addresses, and adds a shippable address, the next button doesn't activate until they click the added address - Closes #1671

--- a/css/obBase.css
+++ b/css/obBase.css
@@ -3065,6 +3065,11 @@ input[type="number"].fieldItem.fieldItem-withButton {
   padding-left: 50px;
 }
 
+input[type="number"].fieldItem.spinButtons {
+  overflow: hidden;
+  padding-right: 25px;
+}
+
 .numberSpinnerUp,
 .numberSpinnerDown {
   cursor: pointer;
